devops/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: xyz-ingress
  namespace: xyz-dev
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "200m"
spec:
  tls:
  - hosts: 
    - www.xyz.com
  rules:
    - host: www.xyz.com
      http:
        paths:
        - backend:
            serviceName: xyz-seed-service
            servicePort: 9000
          path: /seed
